Initial implementation of YOLO for video analysis and labelling. For usage, follow the comments at the start of yolo.py

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 
 # VSCode settings
 .vscode
+
+# YOLO neural network weights
+yolo/yolov3.weights
+
+# YOLO input and out files (images and videos)
+yolo/inputs/
+yolo/outputs/
