--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ yolo/yolov3.weights
 # YOLO input and out files (images and videos)
 yolo/inputs/
 yolo/outputs/
+
+# YOLOv7 model(s)
+yolov7/models/
+
+#YOLOv7 input and output files
+yolov7/inputs/
+yolov7/outputs/
