RUC-06 YOLOv7 Implementation (#9)
* Working implementation of yolov7 for object detection

* Added empty newline to gitignore

* Fixed bug relating to output video dimensions. Now dynamically scales output video with input video size instead of crashing and not saving.

* Added .DS_Store files to gitignore. These are autogenerated by OSX and do not need to be tracked by git.

* Updated the url to find the YOLO models

---------

Co-authored-by: tuck-ab

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ yolo/yolov3.weights
 # YOLO input and out files (images and videos)
 yolo/inputs/
 yolo/outputs/
+
+# YOLOv7 model(s)
+yolov7/models/
+
+#YOLOv7 input and output files
+yolov7/inputs/
+yolov7/outputs/
+
+# MAC OSX auto generated files describing file system structure
+.DS_Store
