RUC-15 Bounding Box CNN (#13)
* Isolating BB images from frames in given video

* Added paths for labels dir

* Changed location of user flag assertion

* Added slurms to gitignore

* Code to get the count of bounding boxes

* Added a u1903266 file for creating code not in __main__

* Added comments to cli functions

* Code used to get basic analysis on result of yolo on videos

* Updated gitignore and moved data gathering code to seperate class

* Extended tool for video processing including writing

* Old code removed

* Added more QOL changes to YOLO handler

* Updated imports fro video handlers

* More scripts for u1903266 flag

* The structure of the model

* Code to generate yolo training data

* Code for labels

* Code to train model

* typo fix

* Updated CLI to choose what to run

* More personal scripts

* Some commenting

* Bugfix

* Added newlines

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /videos/
 /images/
 /labels/
+/temp/
 
 # Python version and virtual environment files
 /venv/
@@ -29,3 +30,11 @@ yolov7/outputs/
 
 # MAC OSX auto generated files describing file system structure
 .DS_Store
+
+# Directory for Slurm output files running on the DCS batch system
+slurms
+
+# Bounding box analysis data directories
+game_label_model/bb_cnn_model/bb_nums
+game_label_model/bb_cnn_model/bb_data
+game_label_model/bb_cnn_model/bb_data_new
