--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 numpy==1.23.4
 opencv-python==4.6.0.66
+pandas
 
 matplotlib
 
@@ -7,3 +8,5 @@ onnxruntime
 
 tensorflow==2.9.1
 pydot
+
+scikit-learn
