--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,92 @@
-numpy==1.23.4
+absl-py==1.4.0
+apache-beam==2.45.0
+astunparse==1.6.3
+attrs==21.4.0
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+cloudpickle==2.2.1
+coloredlogs==15.0.1
+contextlib2==21.6.0
+contourpy==1.0.7
+crcmod==1.7
+cycler==0.11.0
+dill==0.3.1.1
+docopt==0.6.2
+fastavro==1.7.2
+fasteners==0.18
+flatbuffers==22.11.23
+fonttools==4.39.3
+gast==0.4.0
+google-auth==2.16.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+google-vizier==0.1.3
+googleapis-common-protos==1.58.0
+greenlet==2.0.2
+grpcio==1.48.2
+grpcio-tools==1.48.2
+h5py==3.8.0
+hdfs==2.7.0
+httplib2==0.20.4
+humanfriendly==10.0
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.12.0
+joblib==1.2.0
+keras==2.11.0
+kiwisolver==1.4.4
+libclang==15.0.6.1
+Markdown==3.4.1
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+ml-collections==0.1.1
+mpmath==1.2.1
+networkx==3.0
+numpy==1.22.4
+oauthlib==3.2.2
+objsize==0.6.1
+onnxruntime==1.13.1
 opencv-python==4.6.0.66
-pandas
-
-matplotlib
-
-onnxruntime
-
-tensorflow==2.9.1
-pydot
-
-scikit-learn
+opt-einsum==3.3.0
+orjson==3.8.7
+packaging==21.3
+pandas==1.5.3
+Pillow==9.5.0
+portpicker==1.5.2
+proto-plus==1.22.2
+protobuf==3.19.6
+psutil==5.9.4
+pyarrow==9.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pydot==1.4.2
+pymongo==3.13.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.7.1
+PyYAML==6.0
+regex==2022.10.31
+requests==2.28.2
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+SQLAlchemy==1.4.0
+sympy==1.11.1
+tensorboard==2.11.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
+tensorflow-gnn==0.5.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.2.0
+threadpoolctl==3.1.0
+typing_extensions==4.5.0
+urllib3==1.26.14
+Werkzeug==2.2.3
+wrapt==1.15.0
+zipp==3.15.0
+zstandard==0.20.0
